Alignment in Course Editor Fixed

--- a/src/main/webapp/course-editor/course-editor.style.client.css
+++ b/src/main/webapp/course-editor/course-editor.style.client.css
@@ -130,3 +130,7 @@
     border-radius: 5px;
 }
 
+.wbdv-align-right {
+    text-align: right;
+}
+
